[CopyJob] Use resolved URL in copyingDone so undo can rename back using local file

Summary:
In case of desktop:/ KIO which rewrites URLs, looking up the URL the trashed file got didn't work.
This resulted in trash:/filename being recorded by the undo manager which then
failed to restore the file as it was actually trashed to e.g. trash:/0-filename.

In addition, the source URL must be resolved too, since kio_trash
doesn't support renaming from trash to desktop URLs.

BUG: 391606
FIXED-IN: 5.62

CHANGELOG: Undoing trashing files on the desktop has been fixed

Thanks: to Kai-Uwe for the debugging and the initial patch; to Nate for pinging me a few times for this to happen ;)

Test Plan:
Extended kio_desktop's unittest: http://www.davidfaure.fr/2019/test_trash_and_undo.diff
Did not test as user.

Reviewers: broulik, ngraham

Reviewed By: ngraham

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D23758